Add: .gitignore file, update README with project details, replace logo image, and modify HTML, CSS, and JavaScript for improved functionality

--- a/file.html
+++ b/file.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="e.png" alt="Logo d'EPITECH">
+            <img src="epitech_logo.png" alt="Logo d'EPITECH">
         </div>
 
         <form id="authenticate">
